--- a/docs/Write-ADTLogEntry.mdx
+++ b/docs/Write-ADTLogEntry.mdx
@@ -12,9 +12,9 @@ Write messages to a log file in CMTrace.exe compatible format or Legacy text fil
 ## SYNTAX
 
 ```powershell
-Write-ADTLogEntry [-Message] <String[]> [[-Severity] <UInt32>] [[-Source] <String>] [[-ScriptSection] <String>]
- [[-LogType] <String>] [[-LogFileDirectory] <String>] [[-LogFileName] <String>] [-PassThru] [-DebugMessage]
- [<CommonParameters>]
+Write-ADTLogEntry [-Message] <String[]> [[-Severity] <LogSeverities>] [[-Source] <String>]
+ [[-ScriptSection] <String>] [[-LogType] <String>] [[-LogFileDirectory] <String>] [[-LogFileName] <String>]
+ [-PassThru] [-DebugMessage] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -65,7 +65,7 @@ When writing to console or CMTrace.exe log format, it allows highlighting of mes
 Options: 0 = Success (highlighted in green), 1 = Information (default), 2 = Warning (highlighted in yellow), 3 = Error (highlighted in red)
 
 ```yaml
-Type: UInt32
+Type: LogSeverities
 Parameter Sets: (All)
 Aliases:
 
