--- a/docs/Start-ADTProcess.mdx
+++ b/docs/Start-ADTProcess.mdx
@@ -11,56 +11,228 @@ Execute a process with optional arguments, working directory, window style.
 
 ## SYNTAX
 
-### CreateNoWindow (Default)
+### Default_CreateWindow_Wait (Default)
 
 ```powershell
 Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
- [-WorkingDirectory <String>] [-CreateNoWindow] [-NoWait] [-SuccessExitCodes <Int32[]>]
- [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
- [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
-```
-
-### UseShellExecuteWaitForMsiExec
-
-```powershell
-Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
- [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-CreateNoWindow]
- [-WindowStyle <ProcessWindowStyle>] [-NoWait] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
- [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
- [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
-```
-
-### UseShellExecute
-
-```powershell
-Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
- [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-CreateNoWindow]
- [-WindowStyle <ProcessWindowStyle>] [-NoWait] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-WorkingDirectory <String>] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
  [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
  [<CommonParameters>]
 ```
 
-### UsernameWaitForMsiExec
+### Username_CreateNoWindow_Timeout
 
 ```powershell
 Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
  [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
- [-CreateNoWindow] [-WindowStyle <ProcessWindowStyle>] [-NoWait] [-WaitForMsiExec]
- [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-CreateNoWindow] -Timeout <TimeSpan> [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout]
+ [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
  [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
 ```
 
-### Username
+### Username_CreateNoWindow_NoWait
 
 ```powershell
 Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
  [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
- [-CreateNoWindow] [-WindowStyle <ProcessWindowStyle>] [-NoWait] [-SuccessExitCodes <Int32[]>]
+ [-CreateNoWindow] [-NoWait] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
+ [<CommonParameters>]
+```
+
+### Username_CreateNoWindow_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ [-CreateNoWindow] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
+ [<CommonParameters>]
+```
+
+### Username_WindowStyle_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ -WindowStyle <ProcessWindowStyle> -Timeout <TimeSpan> [-TimeoutAction <ActionPreference>]
+ [-NoTerminateOnTimeout] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
+ [<CommonParameters>]
+```
+
+### Username_WindowStyle_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ -WindowStyle <ProcessWindowStyle> [-NoWait] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
  [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
  [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
 ```
 
-### CreateNoWindowWaitForMsiExec
+### Username_WindowStyle_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ -WindowStyle <ProcessWindowStyle> [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
+ [<CommonParameters>]
+```
+
+### Username_CreateWindow_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ -Timeout <TimeSpan> [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Username_CreateWindow_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ [-NoWait] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
+ [<CommonParameters>]
+```
+
+### Username_CreateWindow_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Username <String> [-UseLinkedAdminToken] [-InheritEnvironmentVariables]
+ [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_CreateNoWindow_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-CreateNoWindow] -Timeout <TimeSpan>
+ [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
+ [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
+ [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_CreateNoWindow_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-CreateNoWindow] [-NoWait] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_CreateNoWindow_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-CreateNoWindow] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_WindowStyle_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] -WindowStyle <ProcessWindowStyle>
+ -Timeout <TimeSpan> [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_WindowStyle_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] -WindowStyle <ProcessWindowStyle> [-NoWait]
+ [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_WindowStyle_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] -WindowStyle <ProcessWindowStyle>
+ [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_CreateWindow_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] -Timeout <TimeSpan>
+ [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
+ [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
+ [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_CreateWindow_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-NoWait] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### UseShellExecute_CreateWindow_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-UseShellExecute] [-Verb <String>] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Default_WindowStyle_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -WindowStyle <ProcessWindowStyle> -Timeout <TimeSpan>
+ [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
+ [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
+ [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Default_WindowStyle_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -WindowStyle <ProcessWindowStyle> [-NoWait] [-WaitForMsiExec]
+ [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Default_WindowStyle_Wait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -WindowStyle <ProcessWindowStyle> [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
+ [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
+ [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Default_CreateNoWindow_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-CreateNoWindow] -Timeout <TimeSpan> [-TimeoutAction <ActionPreference>]
+ [-NoTerminateOnTimeout] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>]
+ [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru]
+ [<CommonParameters>]
+```
+
+### Default_CreateNoWindow_NoWait
 
 ```powershell
 Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
@@ -69,22 +241,31 @@ Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentL
  [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
 ```
 
-### DefaultWaitForMsiExec
+### Default_CreateNoWindow_Wait
 
 ```powershell
 Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
- [-WorkingDirectory <String>] [-WindowStyle <ProcessWindowStyle>] [-NoWait] [-WaitForMsiExec]
- [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
- [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
-```
-
-### Default
-
-```powershell
-Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
- [-WorkingDirectory <String>] [-WindowStyle <ProcessWindowStyle>] [-NoWait] [-SuccessExitCodes <Int32[]>]
+ [-WorkingDirectory <String>] [-CreateNoWindow] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
  [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
  [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Default_CreateWindow_NoWait
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] [-NoWait] [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>]
+ [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>] [-PriorityClass <ProcessPriorityClass>]
+ [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
+```
+
+### Default_CreateWindow_Timeout
+
+```powershell
+Start-ADTProcess -FilePath <String> [-ArgumentList <String[]>] [-SecureArgumentList]
+ [-WorkingDirectory <String>] -Timeout <TimeSpan> [-TimeoutAction <ActionPreference>] [-NoTerminateOnTimeout]
+ [-WaitForMsiExec] [-SuccessExitCodes <Int32[]>] [-RebootExitCodes <Int32[]>] [-IgnoreExitCodes <String[]>]
+ [-PriorityClass <ProcessPriorityClass>] [-ExitOnProcessFailure] [-PassThru] [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -214,7 +395,7 @@ Only supported while running as the SYSTEM account.
 
 ```yaml
 Type: String
-Parameter Sets: UsernameWaitForMsiExec, Username
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_CreateNoWindow_NoWait, Username_CreateNoWindow_Wait, Username_WindowStyle_Timeout, Username_WindowStyle_NoWait, Username_WindowStyle_Wait, Username_CreateWindow_Timeout, Username_CreateWindow_NoWait, Username_CreateWindow_Wait
 Aliases:
 
 Required: True
@@ -230,7 +411,7 @@ Use a user's linked administrative token while running the process under their c
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: UsernameWaitForMsiExec, Username
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_CreateNoWindow_NoWait, Username_CreateNoWindow_Wait, Username_WindowStyle_Timeout, Username_WindowStyle_NoWait, Username_WindowStyle_Wait, Username_CreateWindow_Timeout, Username_CreateWindow_NoWait, Username_CreateWindow_Wait
 Aliases:
 
 Required: False
@@ -246,7 +427,7 @@ Specifies whether the process running as a user should inherit the SYSTEM accoun
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: UsernameWaitForMsiExec, Username
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_CreateNoWindow_NoWait, Username_CreateNoWindow_Wait, Username_WindowStyle_Timeout, Username_WindowStyle_NoWait, Username_WindowStyle_Wait, Username_CreateWindow_Timeout, Username_CreateWindow_NoWait, Username_CreateWindow_Wait
 Aliases:
 
 Required: False
@@ -273,7 +454,7 @@ If you set UseShellExecute to $true, there will be no available output from the 
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: UseShellExecuteWaitForMsiExec, UseShellExecute
+Parameter Sets: UseShellExecute_CreateNoWindow_Timeout, UseShellExecute_CreateNoWindow_NoWait, UseShellExecute_CreateNoWindow_Wait, UseShellExecute_WindowStyle_Timeout, UseShellExecute_WindowStyle_NoWait, UseShellExecute_WindowStyle_Wait, UseShellExecute_CreateWindow_Timeout, UseShellExecute_CreateWindow_NoWait, UseShellExecute_CreateWindow_Wait
 Aliases:
 
 Required: True
@@ -290,28 +471,12 @@ Common usages are "runas" to trigger a UAC elevation of the process.
 
 ```yaml
 Type: String
-Parameter Sets: UseShellExecuteWaitForMsiExec, UseShellExecute
+Parameter Sets: UseShellExecute_CreateNoWindow_Timeout, UseShellExecute_CreateNoWindow_NoWait, UseShellExecute_CreateNoWindow_Wait, UseShellExecute_WindowStyle_Timeout, UseShellExecute_WindowStyle_NoWait, UseShellExecute_WindowStyle_Wait, UseShellExecute_CreateWindow_Timeout, UseShellExecute_CreateWindow_NoWait, UseShellExecute_CreateWindow_Wait
 Aliases:
 
 Required: False
 Position: Named
 Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -CreateNoWindow
-
-Specifies whether the process should be started with a new window to contain it.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: CreateNoWindow, UseShellExecuteWaitForMsiExec, UseShellExecute, UsernameWaitForMsiExec, Username, CreateNoWindowWaitForMsiExec
-Aliases:
-
-Required: False
-Position: Named
-Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -329,13 +494,29 @@ They can choose to ignore it.
 
 ```yaml
 Type: ProcessWindowStyle
-Parameter Sets: UseShellExecuteWaitForMsiExec, UseShellExecute, UsernameWaitForMsiExec, Username, DefaultWaitForMsiExec, Default
+Parameter Sets: Username_WindowStyle_Timeout, Username_WindowStyle_NoWait, Username_WindowStyle_Wait, UseShellExecute_WindowStyle_Timeout, UseShellExecute_WindowStyle_NoWait, UseShellExecute_WindowStyle_Wait, Default_WindowStyle_Timeout, Default_WindowStyle_NoWait, Default_WindowStyle_Wait
 Aliases:
 Accepted values: Normal, Hidden, Minimized, Maximized
 
-Required: False
+Required: True
 Position: Named
 Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -CreateNoWindow
+
+Specifies whether the process should be started with a new window to contain it.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_CreateNoWindow_NoWait, Username_CreateNoWindow_Wait, UseShellExecute_CreateNoWindow_Timeout, UseShellExecute_CreateNoWindow_NoWait, UseShellExecute_CreateNoWindow_Wait, Default_CreateNoWindow_Timeout, Default_CreateNoWindow_NoWait, Default_CreateNoWindow_Wait
+Aliases:
+
+Required: True
+Position: Named
+Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -346,7 +527,58 @@ Immediately continue after executing the process.
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: (All)
+Parameter Sets: Username_CreateNoWindow_NoWait, Username_WindowStyle_NoWait, Username_CreateWindow_NoWait, UseShellExecute_CreateNoWindow_NoWait, UseShellExecute_WindowStyle_NoWait, UseShellExecute_CreateWindow_NoWait, Default_WindowStyle_NoWait, Default_CreateNoWindow_NoWait, Default_CreateWindow_NoWait
+Aliases:
+
+Required: True
+Position: Named
+Default value: False
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -Timeout
+
+How long to wait for the process before timing out.
+
+```yaml
+Type: TimeSpan
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_WindowStyle_Timeout, Username_CreateWindow_Timeout, UseShellExecute_CreateNoWindow_Timeout, UseShellExecute_WindowStyle_Timeout, UseShellExecute_CreateWindow_Timeout, Default_WindowStyle_Timeout, Default_CreateNoWindow_Timeout, Default_CreateWindow_Timeout
+Aliases:
+
+Required: True
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -TimeoutAction
+
+What action to take on timeout.
+Follows ErrorAction if not specified.
+
+```yaml
+Type: ActionPreference
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_WindowStyle_Timeout, Username_CreateWindow_Timeout, UseShellExecute_CreateNoWindow_Timeout, UseShellExecute_WindowStyle_Timeout, UseShellExecute_CreateWindow_Timeout, Default_WindowStyle_Timeout, Default_CreateNoWindow_Timeout, Default_CreateWindow_Timeout
+Aliases:
+Accepted values: SilentlyContinue, Stop, Continue, Inquire, Ignore, Suspend
+
+Required: False
+Position: Named
+Default value: None
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -NoTerminateOnTimeout
+
+Indicates that the process should not be terminated on timeout.
+Only supported for GUI-based applications.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: Username_CreateNoWindow_Timeout, Username_WindowStyle_Timeout, Username_CreateWindow_Timeout, UseShellExecute_CreateNoWindow_Timeout, UseShellExecute_WindowStyle_Timeout, UseShellExecute_CreateWindow_Timeout, Default_WindowStyle_Timeout, Default_CreateNoWindow_Timeout, Default_CreateWindow_Timeout
 Aliases:
 
 Required: False
@@ -363,10 +595,10 @@ In such cases, this variable will ensure that this function waits for the msiexe
 
 ```yaml
 Type: SwitchParameter
-Parameter Sets: UseShellExecuteWaitForMsiExec, UsernameWaitForMsiExec, CreateNoWindowWaitForMsiExec, DefaultWaitForMsiExec
+Parameter Sets: (All)
 Aliases:
 
-Required: True
+Required: False
 Position: Named
 Default value: False
 Accept pipeline input: False
